# cookiecutter-python-project

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cookiecutter.json
.github/workflows/: tests.yml
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_slug}}/: .flake8  .importlinter  .isort.cfg  .pre-commit-config.yaml  Procfile  README.md  docker-compose.yml  env.example  env.testing  manage.py  mypy.ini  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.github/workflows/: tests.yml
{{cookiecutter.project_slug}}/{{cookiecutter.root_package}}/: asgi.py  settings.py  wsgi.py
