[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
homepage = "{{ cookiecutter.project_url }}"
repository = "{{ cookiecutter.project_url }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
packages = [
    { include = "{{ cookiecutter.root_package }}" }
]
license = "{{ cookiecutter.project_license }}"
classifiers = [
    "Intended Audience :: Developers",
{% if cookiecutter.project_license == 'Proprietary' -%}
    "Private :: Do Not Upload",
{%- endif %}
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "~{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"
black = "^22.10.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"
import-linter = "^1.4.0"
mkdocs-material = "^8.5.7"
mkdocstrings = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["tests", "{{ cookiecutter.root_package }}"]
