[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
homepage = "{{ cookiecutter.project_url }}"
repository = "{{ cookiecutter.project_url }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
packages = [
    { include = "{{ cookiecutter.root_package }}" }
]
license = "{{ cookiecutter.project_license }}"
classifiers = [
    "Intended Audience :: Developers",
{% if cookiecutter.project_license == 'Proprietary' -%}
    "Private :: Do Not Upload",
{%- endif %}
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "~{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["tests", "{{ cookiecutter.root_package }}"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
follow_imports = "silent"
scripts_are_modules = true
namespace_packages = true
no_implicit_optional = true

[tool.pytest.ini_options]
looponfailroots = "{{ cookiecutter.root_package }}"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "C90", "I", "UP"]
ignore = ["E203"]
